# Continuous-glucose-monitoring-device

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/architecture/: software-architecture.md
docs/requirements/: software-requirements.md  system-requirements.md  user-needs.md
docs/risk/: hazard-analysis.md
docs/soup/: soup-list.md
docs/verification/: verification-plan.md
firmware/: CMakeLists.txt
firmware/include/: cgm_types.h
firmware/src/: main.c
firmware/src/alert/: alert_manager.c  alert_manager.h
firmware/src/ble/: ble_manager.c  ble_manager.h  cgm_service.c  cgm_service.h
firmware/src/config/: device_config.h  error_codes.h
firmware/src/power/: power_manager.c  power_manager.h
firmware/src/sensor/: calibration.c  calibration.h  glucose_sensor.c  glucose_sensor.h
firmware/src/signal/: filter.c  filter.h  signal_processing.c  signal_processing.h
firmware/src/storage/: flash_storage.c  flash_storage.h
firmware/tests/: test_alert_manager.c  test_calibration.c  test_signal_processing.c  test_stubs.c  test_stubs.h
tools/: calibration_tool.py  data_analyzer.py
